syntax = "proto3";

package controller.api.resources.jobs.v1;

option go_package = "github.com/hashicorp/watchtower/internal/gen/controller/api/resources/jobs;jobs";

import "google/protobuf/timestamp.proto";

// Job contains all fields related to a Job resource
message Job {
	// The ID of the job
	// Output only.
	string id = 10;

	// The time the job entered pending state (e.g. creation)
	// Output only.
	google.protobuf.Timestamp pending_time = 20 [json_name="pending_time"];

	// The time the job entered active state (currently running)
	// Output only.
	google.protobuf.Timestamp active_time = 30 [json_name="active_time"];

    // The time the job entered caneling state
	// Output only.
	google.protobuf.Timestamp canceling_time = 40 [json_name="canceling_time"];

    // The time the job entered canceled state
	// Output only.
	google.protobuf.Timestamp canceled_time = 50 [json_name="canceled_time"];

    // The time the job entered success state
	// Output only.
    google.protobuf.Timestamp complete_time = 60 [json_name="complete_time"];

    // The type of job
    // Output only.
    string type = 70;

    // The current status of the job
    // Output only.
    string status = 80;
}
