syntax = "proto3";

// Package store provides protobufs for storing types in the host package.
package controller.storage.plugin.store.v1;
option go_package = "github.com/hashicorp/boundary/internal/plugin/store;store";

// This is a typeless plugin.  In practice this should never be used directly.
// This is included for testing purposes only.
message Plugin {
  // public_id is a surrogate key suitable for use in a public API.
  // @inject_tag: `gorm:"primary_key"`
  string public_id = 10;

  // The scope_id of the owning scope and must be set.
  // @inject_tag: `gorm:"not_null"`
  string scope_id = 20;

  // name is optional. If set, it must be unique within scope_id.
  // @inject_tag: `gorm:"default:null"`
  string name = 30;
}
